change the size of the images

--- a/services.html
+++ b/services.html
@@ -58,35 +58,35 @@
             <img src="resources/modern-bike.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">modern bike for sale</h3>
-                <p>They are of different type, have it and ride safely!</p>
+                <p class="text-white">They are of different type, have it and ride safely!</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="resources/bike-service.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">get full service</h3>
-                <p>We offer our customer with full service for their bikes</p>
+                <p class="text-white">We offer our customer with full service for their bikes</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="resources/bike-rice.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">bike for rice</h3>
-                <p>We also give bike support for cyclist customers</p>
+                <p class="text-white">We also give bike support for cyclist customers</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="resources/repair-bike.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">mobile service</h3>
-                <p>We have mobile service as well, we are always there for you.</p>
+                <p class="text-white">We have mobile service as well, we are always there for you.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="resources/enjoy-ride.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block mb-5">
+            <div class="carousel-caption d-none d-md-block mb-5 text-white">
                 <h3 class="text-capitalize text-white">enjoy your riding</h3>
-                <p>Just contact as any thing. and ride safe.</p>
+                <p class="text-white">Just contact as any thing. and ride safe.</p>
             </div>
         </div>
     </div>
@@ -117,7 +117,7 @@
                         <p class="mb-0 text-muted">$499</p>
                         <div class="row">
                             <div class="col-md-12 text-center text-md-left text-md-right">
-                                <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <a href="buy.html" class="btn btn-secondary btn-rounded">
                                     <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                         <h5 class="card-title">Touring bicycles</h5>
                         <p class="mb-0 text-muted">$2150</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                            <a href="buy.html" class="btn btn-secondary btn-rounded">
                                 <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <h5 class="card-title">Hybrid Bicycle</h5>
                         <p class="mb-0 text-muted">$2500</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                            <a href="buy.html" class="btn btn-secondary btn-rounded">
                                 <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <h5 class="card-title">kids bike</h5>
                         <p class="mb-0 text-muted">$399</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                            <a href="buy.html" class="btn btn-secondary btn-rounded">
                                 <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                         <h5 class="card-title">Road bicycle</h5>
                         <p class="mb-0 text-muted">$890</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                            <a href="buy.html" class="btn btn-secondary btn-rounded">
                                 <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <h5 class="card-title">Cyclocross bicycle <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
                         <p class="mb-0 text-muted">$1150</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                            <a href="buy.html" class="btn btn-secondary btn-rounded">
                                 <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
             </div>
         </div>
         <div class="btn-visit text-center w-100 mt-3">
-            <a href="contact.html" class="btn btn-primary text-center" style="width: 30%">Contact Us</a>
+            <a href="contact.html" class="btn btn-secondary text-center" style="width: 30%">Contact Us</a>
         </div>
     </section>
 </div>
