--- a/services.html
+++ b/services.html
@@ -55,35 +55,35 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="resources/modern-bike.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="resources/modern-bike.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">modern bike for sale</h3>
                 <p class="text-white">They are of different type, have it and ride safely!</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="resources/bike-service.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="resources/bike-service.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">get full service</h3>
                 <p class="text-white">We offer our customer with full service for their bikes</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="resources/bike-rice.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="resources/bike-rice.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">bike for rice</h3>
                 <p class="text-white">We also give bike support for cyclist customers</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="resources/repair-bike.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="resources/repair-bike.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
                 <h3 class="text-capitalize text-white">mobile service</h3>
                 <p class="text-white">We have mobile service as well, we are always there for you.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="resources/enjoy-ride.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="resources/enjoy-ride.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5 text-white">
                 <h3 class="text-capitalize text-white">enjoy your riding</h3>
                 <p class="text-white">Just contact as any thing. and ride safe.</p>
@@ -102,7 +102,7 @@
 
 <div class="container mt-sm-5">
     <section>
-        <h3 class="font-weight-bold mb-5 text-center">Different Kinds Of Bike</h3>
+        <h2 class="font-weight-bold mb-5 text-center">Different Kinds Of Bike</h2>
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
@@ -220,7 +220,7 @@
 
 <div class="container mt-sm-5">
     <section>
-        <h3 class="font-weight-bold mb-5 text-center">Our Services</h3>
+        <h2 class="font-weight-bold mb-5 text-center">Our Services</h2>
         <div class="row">
             <div class="card col-md m-1">
                 <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
