--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,6 @@
 <body>
 
 <div class="header text-center">
-    <h1>Still need a header???????</h1>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
@@ -68,7 +67,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row row-cols-4">
+    <div class="row row-cols-6">
         <div class="col-sm">
             <div class="card-body">
                 <h3 class="card-title">Our team</h3>
@@ -85,35 +84,21 @@
             </div>
             <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
         </div>
-        <div class="col-sm">
-            <div class="card-body">
-                <h3 class="card-title">Testimonials</h3>
-                <p class="card-text">Will look for testimonials to place here with a slider</p>
-            </div>
-        </div>
     </div>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
     <div class="card col-md-6 mt-5 mb-5 my-0 mx-auto">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="100000">
             <div class="w-100 carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="carousel-caption">
                         <div class="row">
-                            <div class="col-sm-3">
-                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid"/>
-                            </div>
                             <div class="col-sm-9">
-                                <h3>Gives me hope</h3>
-                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
-                                    elit.</small>
+                                <h3>A proud B-biker!</h3>
+                                <small>My B-bike is my new love it goes everywhere with me. There was a small problem
+                                    with my light and the customer service team fixed it after working hours. I will
+                                    recommend you to all my friends and family!</small>
                                 <small class="smallest mute">- Yayo Dudemous</small>
                             </div>
                         </div>
@@ -122,15 +107,12 @@
                 <div class="carousel-item">
                     <div class="carousel-caption">
                         <div class="row">
-                            <div class="col-sm-3">
-                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
-                            </div>
                             <div class="col-sm-9">
-                                <h3>You will love it.</h3>
-                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
-                                    elit.</small>
-                                <small class="smallest mute">- Yayo Dudemous</small>
+                                <h3>Cooperation as it should be.</h3>
+                                <small>I can recommend B-bike as a partner for companies who consider to replace
+                                    their carfleet with e-bikes. From start to end B-bike will walk you to the process
+                                    and their after-sales service is excellent.</small>
+                                <small class="smallest mute">- Gigi Meta (Head of public transport-De Lijn)</small>
                             </div>
                         </div>
                     </div>
@@ -138,15 +120,11 @@
                 <div class="carousel-item">
                     <div class="carousel-caption">
                         <div class="row">
-                            <div class="col-sm-3">
-                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
-                            </div>
                             <div class="col-sm-9">
-                                <h3>Velvet pouch!</h3>
-                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
-                                    elit.</small>
-                                <small class="smallest mute">- Yayo Dudemous</small>
+                                <h3>No excuses anymore to work on your health</h3>
+                                <small>At first my husband was a bit hesitant, but now it's our way of living. Thank you
+                                    for helping to convince my husband.</small>
+                                <small class="smallest mute">- Bieke de Graaf</small>
                             </div>
                         </div>
                     </div>
