Changing Logo in nav-bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">B-bike</a>
+    <span class="navbar-brand text-primary" href="#">B-bike</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
         </div>
 
         <section class="media border-bottom row pb-5">
-            <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" style="max-height: 300px; max-width: 300px;"   src="resources/bike1.jpg"
+            <img class="d-flex align-self-center mx-5 col-sm-12" style="max-height: 300px; max-width: 300px;"   src="resources/bike1.jpg"
                  alt="Generic placeholder image">
             <div class="media-body col-md-12">
                 <h2 class="mt-0">The bike</h2>
@@ -90,11 +90,11 @@
                     the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
                     sustainability of our planet.</p>
             </div>
-            <img class="d-flex align-self-center img-thumbnail col-sm-12 mx-5" src="resources/bike3.jpg"
+            <img class="d-flex align-self-center col-sm-12 mx-5" src="resources/bike3.jpg"
                  style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
         </section>
         <section class="media row py-5">
-            <img class="d-flex align-self-center  img-thumbnail col-sm-12 mx-5" src="resources/bike4.jpg"
+            <img class="d-flex align-self-center col-sm-12 mx-5" src="resources/bike4.jpg"
                  alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
             <div class="media-body col-md-12">
                 <h2 class="mt-0">Cycle repair and workshop services</h2>
