--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body class="bg-light">
 
@@ -46,7 +48,6 @@
     </div>
 </nav>
 
-    <h1 class="text-center"></h1>
     <div class="container pt-5 mt-4 d-flex">
         <br>
         <div class="text-left">
@@ -108,6 +109,15 @@
     <hr>
     <div class="container pt-5 mt-2 d-flex">
         <a href="https://awet100.github.io/B-bike.com/contact.html" class="btn btn-secondary wrap-center" role="button">Contact Us</a>
+    </div>
+    <div class="text-center">
+        <h3 class="text-primary mt-3">Follow B-Bike on social media!</h3>
+            <div class="container d-flex justify-content-around">
+
+                <a href="#" class="fa fa-facebook" id="facebook"></a>
+                <a href="#" class="fa fa-twitter" id="twitter"></a>
+                <a href="#" class="fa fa-instagram" id="instagram"></a>
+            </div>
     </div>
     <div class="container pt-5 mt-2 d-flex flex-row">
         <img src="resources/bycicle-icon.png" alt="bycicle" class="bycicleani">
