added working links to social media buttons

--- a/blog.html
+++ b/blog.html
@@ -114,9 +114,9 @@
         <h3 class="text-primary mt-3">Follow B-Bike on social media!</h3>
             <div class="container d-flex justify-content-around">
 
-                <a href="#" class="fa fa-facebook" id="facebook"></a>
-                <a href="#" class="fa fa-twitter" id="twitter"></a>
-                <a href="#" class="fa fa-instagram" id="instagram"></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="fa fa-facebook" id="facebook"></a>
+                <a href="https://twitter.com/twitter" target="_blank" rel="noopener" class="fa fa-twitter" id="twitter"></a>
+                <a href="https://www.instagram.com/?hl=nl" target="_blank" rel="noopener" class="fa fa-instagram" id="instagram"></a>
             </div>
     </div>
     <div class="container pt-5 mt-2 d-flex flex-row">
