title for slider

--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
     <div class="row row-cols-6">
         <div class="col-sm">
             <div class="card-body">
-                <h3 class="card-title">Our team</h3>
+                <h2 class="card-title">Our team</h2>
                 <p class="card-text">At B-bike diversity is not only something for the books.<br> We breath
                     inclusivity from the board to our employees and suppliers.</p>
             </div>
@@ -88,6 +88,7 @@
     <br>
     <br>
     <br>
+    <h2 class="text-center">Testimonials</h2>
     <div class="card col-md-6 mt-5 mb-5 my-0 mx-auto">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="100000">
             <div class="w-100 carousel-inner" role="listbox">
@@ -95,7 +96,7 @@
                     <div class="carousel-caption">
                         <div class="row">
                             <div class="col-sm-9">
-                                <h2>A proud B-biker!</h2>
+                                <h3>A proud B-biker!</h3>
                                 <small>My B-bike is my new love it goes everywhere with me. There was a small problem
                                     with my light and the customer service team fixed it after working hours. I will
                                     recommend you to all my friends and family!</small>
@@ -108,7 +109,7 @@
                     <div class="carousel-caption">
                         <div class="row">
                             <div class="col-sm-9">
-                                <h2>Cooperation as it should be.</h2>
+                                <h3>Cooperation as it should be.</h3>
                                 <small>I can recommend B-bike as a partner for companies who consider to replace
                                     their carfleet with e-bikes. From start to end B-bike will walk you to the process
                                     and their after-sales service is excellent.</small>
@@ -121,7 +122,7 @@
                     <div class="carousel-caption">
                         <div class="row">
                             <div class="col-sm-9">
-                                <h2>No excuses anymore to work on your health</h2>
+                                <h3>No excuses anymore to work on your health</h3>
                                 <small>At first my husband was a bit hesitant, but now it's our way of living. Thank you
                                     for helping to convince my husband.</small>
                                 <small class="smallest mute">- Bieke de Graaf</small>
