--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">B-bike</a>
+    <a class="navbar-brand text-primary" href="#">B-bike</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -71,7 +71,7 @@
         <div class="carousel-item">
             <img src="resources/bike-rice.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
-                <h3 class="text-capitalize text-white">bike for rice</h3>
+                <h3 class="text-capitalize text-white">bike for race</h3>
                 <p class="text-white">We also give bike support for cyclist customers</p>
             </div>
         </div>
@@ -102,7 +102,7 @@
 
 <div class="container mt-sm-5">
     <section>
-        <h2 class="font-weight-bold mb-5 text-center">Different Kinds Of Bike</h2>
+        <h2 class="font-weight-bold mb-5 text-center">Different Kind Of Bikes</h2>
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
@@ -133,7 +133,7 @@
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Touring bicycles</h5>
+                        <h5 class="card-title">Touring bicycle</h5>
                         <p class="mb-0 text-muted">$2150</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-secondary btn-rounded">
