--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel=”icon” type=”image/x-icon” href=”https://raw.githubusercontent.com/awet100/B-bike.com/master/resources/favicon.ico”%3E>
 
 </head>
 <body class="bg-light">
